--- a/css/style.css
+++ b/css/style.css
@@ -230,10 +230,21 @@ header nav ul li:last-child a{
 #destination .gallery{
     margin-top: 48px;
     display: grid;
+    grid-gap: 24px;
+}
+
+#destination .gallery .row div{
+    position: relative;
 }
 
 #destination .gallery p{
+    color: var(--white-color);
+    font-size: 28px;
+    font-weight: 800;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #destination .gallery .row:first-child{
