--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,7 +73,7 @@
     #destination .gallery .row:last-child
     {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-gap: 24px;
     }
     
